# ptt_apiTesting

./: README.md  pyproject.toml
tests/: ProfileValidation.py  add_client.py  add_user.py  anomalies_banking.py  bankingClaim_summary.py  bookingAnomaly_Export.py  bookingClaim_Export.py  bookingPayment_Export.py  booking_anomaly.py  booking_claims.py  booking_payments.py  booking_search.py  cient_search.py  claim_details.py  create-issueLog.py  create_client.py  export_client.py  get-dashbordDetails.py  getTBR_export.py  getTrustBalanceReport&Export.py  getTrustBalanceReport_Export.py  getUserlList.py  get_export_bankReconciliationReport.py  latestClaim_Search.py  logOut.py  login.py  lookUp_bankingColumns.py  lookUp_trustType.py  refresh.py  updateBankingTranasactio.py  update_banking.py  update_escrow_multiplier.py  upload_banking.py  upload_claim.py  weekly_fornghtly_report.py
tests/test_file/: 20230622-Test-SFTP-Banking.xlsx  20230710-All -Banking -new anomaly.xlsx  20230714-claim-file.xlsx
